src/test/ui/resolve/token-error-correct.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/token-error-correct.rs:4:12
   |
LL | fn main() {
   |           - closing delimiter possibly meant for this
LL |     foo(bar(;
   |            ^ unclosed delimiter
LL |
LL | }
   | ^ mismatched closing delimiter

error[E0425]: cannot find function `bar` in this scope
  --> $DIR/token-error-correct.rs:4:9
   |
LL |     foo(bar(;
   |         ^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
